--- a/public/css/header&footer_styles.css
+++ b/public/css/header&footer_styles.css
@@ -41,6 +41,25 @@ button {
   margin: 5px;
 }
 button:hover {
-  background-color: rgba(0, 136, 139, 0.2);
+  background-color:#ad9b83;
   color: #3d2314;
+}
+footer{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 8%;
+  width: 100%;
+  height: 12vh;
+  background-color:#ceb698 ;
+  box-shadow: 0 -5px 6px #a8937c;
+}
+#media{
+  width:30vw;
+  height:6vh;
+  margin: auto;
+  justify-content: flex-end;
+}
+.iglogo{
+  filter: drop-shadow(3px 1px 0.4px #a8937c);
 }
