--- a/views/about.ejs
+++ b/views/about.ejs
@@ -145,13 +145,8 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript">
-      window.addEventListener("scroll", function () {
-        var header = document.querySelector("header");
-        header.classList.toggle(sticky, window.scrollY > 0);
-      })
-    </script>
 </body>
 </body>
+<%- include("partials/footer") -%>
   </div>
   </div>
