--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/header_styles.css">
+<link rel="stylesheet" href="css/header&footer_styles.css">
 
 <header>
     <img class="logo" src="images/logo.png" width="25%">
