--- a/public/css/header&footer_styles.css
+++ b/public/css/header&footer_styles.css
@@ -1,7 +1,7 @@
 button {
   font-family: "Hind", sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 0.8vw;
   color: #ecd2b1;
   text-decoration: none;
 }
