Update in about/media links pe poze
daca dai click pe poza de la descriere te redirectioneaza la cont de insta

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -25,7 +25,7 @@
     </div>
     <div>
       <div id="container_sebi">
-        <img class="logo sebipoza" src="images/sebip_2.jpg" width="100%">
+        <a href="https://www.instagram.com/matei.sebastian9/?hl=en" target="_blank"><img class="logo sebipoza" src="images/sebip_2.jpg" width="100%"></a>
         <div class="sebitext">
           <p2>Hello, my name is Sebastian. I was always fascinated by technology. I began learning about it at a young
             age, with Arduino IDE and C++.
@@ -39,7 +39,7 @@
       <hr class="rounded">
 
       <div id="container_muc">
-        <img class="logo mucpoza" src="images/mucp_2.jpg" width="100%">
+        <a href="https://www.instagram.com/anghel__matei/?hl=en" target="_blank"><img class="logo mucpoza" src="images/mucp_2.jpg" width="100%"></a>
         <div class="muctext">
           <p2>Hey, my name is Matei (english version Matthew), I am 17 years old currently studying at Colegiul National
             de Informatica Tudor Vianu. I love theatre, traveling, reading and cycling . I’ve always wanted to take part
@@ -52,7 +52,7 @@
       <hr class="rounded">
 
       <div id="container_cezar">
-        <img class="logo cezarpoza" src="images/cezarp_2.jpg" width="100%">
+        <a href="https://www.instagram.com/czar.cpp/?hl=en" target="_blank">><img class="logo cezarpoza" src="images/cezarp_2.jpg" width="100%"></a>
         <div class="cezartext">
           <p2>I am Băluță Cezar, a 17 years old student at the National College of Computer Science "Tudor Vianu". I am
             passionate about technology and I am looking forward to becoming a software engineer. I am also a nature
@@ -65,7 +65,7 @@
       <hr class="rounded">
 
       <div id="container_calin">
-        <img class="logo calinpoza" src="images/calinp.jpg" width="100%">
+        <a href="https://www.instagram.com/calin_avr/?hl=en" target="_blank"><img class="logo calinpoza" src="images/calinp.jpg" width="100%"></a>
         <div class="calintext">
           <p2>Hi, my name is Avramoniu Calin. I live in Bucharest and I am passionate about sports, coding and almost
             anything business related. I hope I will become a successful entrepreneur in the future.
@@ -76,7 +76,7 @@
       <hr class="rounded">
 
       <div id="container_iani">
-        <img class="logo ianipoza" src="images/ianip_2.jpg" width="100%" height="100%">
+        <a href="https://www.instagram.com/i_meghea/?hl=en" target="_blank"><img class="logo ianipoza" src="images/ianip_2.jpg" width="100%" height="100%"></a>
 
         <div class="ianitext">
           <p2>My name is Iani and I am one of 10 co-founders of Nos Natura. I’d like to think of myself as innovative
@@ -92,7 +92,7 @@
 
 
       <div id="container_sala">
-        <img class="logo salapoza" src="images/salap_2.jpg" width="100%" height="100%">
+        <a href="https://www.instagram.com/andrei_sa05/" target="_blank"><img class="logo salapoza" src="images/salap_2.jpg" width="100%" height="100%"></a>
         <div class="salatext">
           <p2>My name is Andrei. I am 16 years old and i am a student at National College of Informatics Tudor Vianu. In
             my free time I like to play video games and listen to music.
@@ -102,7 +102,7 @@
       <hr class="rounded">
 
       <div id="container_adi">
-        <img class="logo adipoza" src="images/adip_2.jpg" width="100%">
+        <a href="https://www.instagram.com/adidinamitel/" target="_blank"><img class="logo adipoza" src="images/adip_2.jpg" width="100%"></a>
         <div class="aditext">
           <p2>My name is Adrian and I am a tenacious, kind and emphatic teenager, who always tries to be a better
             version
@@ -115,7 +115,7 @@
       <hr class="rounded">
 
       <div id="container_barbu">
-        <img class="logo barbupoza" src="images/placeholder.png" width="100%">
+        <a href="https://www.instagram.com/matei.brb/" target="_blank"><img class="logo barbupoza" src="images/placeholder.png" width="100%"></a>
         <div class=" barbutext">
           <p2>My name is Matei and I am an enthusiastic teen, working hard for his dreams. I am also passionate about
             reading, music and I am a cinephile. I love social interaction and I offer to help whenever needed.</p2>
@@ -125,7 +125,7 @@
       <hr class="rounded">
 
       <div id="container_vlad">
-        <img class="logo vladpoza" src="images/placeholder.png" width="100%">
+        <a href="https://www.instagram.com/1vlad.andrew/"target="_blank"><img class="logo vladpoza" src="images/placeholder.png" width="100%"></a>
         <div class="vladtext">
           <p2>Hi, My name is Vlad and i'm one of the co-founders of NosNaturas , an student passionate about computer
             science who wants to help the nature in any way possible. It's hard to see how the authorities are so
@@ -137,7 +137,7 @@
       <hr class="rounded">
 
       <div id="container_alin">
-        <img class="logo alinpoza" src="images/alinp_2.jpg" width="100%">
+        <a href="https://www.instagram.com/alin._.marius/" target="_blank"><img class="logo alinpoza" src="images/alinp_2.jpg" width="100%"></a>
         <div class="Alintext">
           <p2>My name is Alin Chirila, I'm 16 years old and currently I'm a student at George Calinescu Highschool.In my
             free time I like to play video games, play ping pong, draw and listen to music. I like working in groups
