ipad update + cateva modificari de design pe home page

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -2,7 +2,7 @@
 /* mobile design */
 /* functioneaza la toate telefoanele testate */
 
-@media (max-width : 420px ) {
+@media (max-width : 600px ) {
     #treecounter {
       height : 15vh ;
     }
@@ -29,8 +29,28 @@
     }
 }
 
-/* ipad + alte tablete design */
+/* ipad + alte tablete */
 
-@media (max-width : 770px) {
-
+@media (max-width : 950px) {
+  #treecounter {
+    height : 15vh ;
+  }
+  .grid2 {
+    height: 30vh;
+  }
+  #treecounter h2{
+    font-size: 3vw ;
+  }
+  #tnumber {
+    font-size: 3vw ;
+  }
+  #first h1 {
+    font-size: 7vw ;
+  }
+  #first p {
+    font-size: 3.5vw ;
+  }
+  #second p2 {
+    font-size: 2.5vw ;
+  }
 }
