--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,7 @@
               <h2 id="counter">TOTAL NUMBER OF TREES PLANTED</h2>
               <p id="tnumber">0</p>
             </section>
+            <%- include("partials/svg") -%>
         </div2>
         <div3 class="grid3">
           <div class="box1">
