--- a/views/about.ejs
+++ b/views/about.ejs
@@ -115,7 +115,7 @@
       <hr class="rounded">
 
       <div id="container_barbu">
-        <a href="https://www.instagram.com/matei.brb/" target="_blank"><img class="logo barbupoza" src="images/placeholder.png" width="100%"></a>
+        <a href="https://www.instagram.com/matei.brb/" target="_blank"><img class="logo barbupoza" src="images/barbup.jpg" width="100%"></a>
         <div class=" barbutext">
           <p2>My name is Matei and I am an enthusiastic teen, working hard for his dreams. I am also passionate about
             reading, music and I am a cinephile. I love social interaction and I offer to help whenever needed.</p2>
@@ -125,7 +125,7 @@
       <hr class="rounded">
 
       <div id="container_vlad">
-        <a href="https://www.instagram.com/1vlad.andrew/"target="_blank"><img class="logo vladpoza" src="images/placeholder.png" width="100%"></a>
+        <a href="https://www.instagram.com/1vlad.andrew/"target="_blank"><img class="logo vladpoza" src="images/vladp.jpg" width="100%"></a>
         <div class="vladtext">
           <p2>Hi, My name is Vlad and i'm one of the co-founders of NosNaturas , an student passionate about computer
             science who wants to help the nature in any way possible. It's hard to see how the authorities are so
