--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,17 +37,15 @@
               <h2 id="counter">TOTAL NUMBER OF TREES PLANTED</h2>
               <p id="tnumber">0</p>
             </section>
-            <%- include("partials/svg") -%>
+            <div class="photot2"><%- include("partials/svg") -%></div>
         </div2>
         <div3 class="grid3">
           <div class="box1">
-            <img class="logo" src="images/placeholder.png" width="100%" height="100%">
+            <img class="logo" src="images/forest1.jpg" width="100%" height="100%">
           </div>
           <div class="box2">
             <section id="second">
-              <p2>This project is 100% funded by the founding members of Nos Natura with their personal money and if it
-                gets too big for our financial powers, only then will we request donations and volunteer support to keep
-                it running. Being just the nine of us at the moment, that could happen rather quickly.</p2>
+              <p2>This project is 100% funded by the founding members of Nos Natura with their personal money and if it gets too big for our financial powers, only then will we request donations, volunteer support or even sponsors in order to keep it running. Being just the ten of us at the moment, that could happen rather quickly.</p2>
             </section>
           </div>
         </div3>
