--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,27 +41,20 @@
         </div2>
         <div3 class="grid3">
           <div class="box1">
-            <img class="logo" src="images/forest1.jpg" width="100%" height="100%">
-          </div>
-          <div class="box2">
-            <section id="second">
+            <div class="poza1"><img class="m1" src="images/forest1.jpg" width="100%" height="100%"></div>
+            <div class="box2">
               <p2>This project is 100% funded by the founding members of Nos Natura with their personal money and if it gets too big for our financial powers, only then will we request donations, volunteer support or even sponsors in order to keep it running. Being just the ten of us at the moment, that could happen rather quickly.</p2>
-            </section>
           </div>
-        </div3>
-        <div class="spatiu"></div>
-        <div3 class="grid4">
-          <div class="box2">
-            <section id="second">
+          </div>
+          <div class="box8">
+            <div class="box9">
               <p2>Each and every single member (person in the photo) is dedicated to this cause and believes that nature
                 deserves a helping hand in the constant fight against pollution and deforestation, even if it makes only
                 a
                 slight change in the grand scheme of things. You can read more about us as individuals as well as the
                 project itself on the About Us page.</p2>
-            </section>
           </div>
-          <div class="box1">
-            <img class="logo" src="images/placeholder.png" width="100%" height="100%">
+          <div class="poza5"><img class="m2" src="images/gr1.jpg" width="100%" height="100%"></div>
           </div>
         </div3>
       </div>
