--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <link rel="stylesheet" href="css/astyles.css">
+  
 </head>
 <div class="snapaux">
   <div class="snapstart">
@@ -21,7 +21,7 @@
   <%- include("partials/header") -%>
 
     <div class="title">
-      <p>-List of NosNatura Founders-</p>
+      <p>- List of NosNatura Founders -</p>
     </div>
     <div>
       <div id="container_sebi">
@@ -41,8 +41,7 @@
       <div id="container_muc">
         <a href="https://www.instagram.com/anghel__matei/?hl=en" target="_blank"><img class="logo mucpoza" src="images/mucp_2.jpg" width="100%"></a>
         <div class="muctext">
-          <p2>Hey, my name is Matei (english version Matthew), I am 17 years old currently studying at Colegiul National
-            de Informatica Tudor Vianu. I love theatre, traveling, reading and cycling . I’ve always wanted to take part
+          <p2>Hey, my name is Matei Anghel (english version Matthew), I am 17 years old currently studying at National College of Computer Science "Tudor Vianu". I love theatre, traveling, reading and cycling . I’ve always wanted to take part
             in a group project that aims to change the world for the better, at least slightly, and I feel like Nos
             Natura
             is the perfect fit for it.</p2>
