--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="styles.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/mobile.css">
+  <link rel="stylesheet" href="css/header&footer_styles.css">
 
 </head>
 
