--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="css/header&footer_styles.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <header>
-    <img class="logo" src="images/logo.png" width="25%">
+    <div class="logo9"><img class="logo" src="images/logo.png" height ="100%" width="100%"></div>
     <nav>
         <ul class="nav_links">
             <li><a class="cta" href="/">
